--- a/index.html
+++ b/index.html
@@ -1,39 +1,107 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Neucha&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="./resources/css/light-theme.css">
-    </head>
-    <body>
-        <header>
-            <div class="nav-container">
-                <div class="initials">
-                    <p>RBL</p>
-                </div>
-                <nav>
-                    <ul>
-                        <li>About</li>
-                        <li>Portfolio</li>
-                        <li>GitHub</li>
-                        <li>Mystery</li>
-                    </ul>
-                </nav>
+
+<head>
+    <title>Brian Levings</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./resources/css/light-theme.css" id="theme-link">
+</head>
+
+<body>
+    <header>
+        <div class="nav-container">
+            <div class="initials">
+                <p>Brian Levings</p>
             </div>
-            <div class="theme-toggle">
-                <label id="toggle-label" for="toggle">Theme:</label>
-                <label class="switch">
+            <nav>
+                <ul>
+                    <li>About</li>
+                    <li>Portfolio</li>
+                    <li>GitHub</li>
+                    <li>Mystery</li>
+                </ul>
+            </nav>
+        </div>
+        <div class="theme-toggle">
+            <label id="toggle-label" for="toggle">Dark Mode:</label>
+            <label class="switch">
                     <input id="toggle" type="checkbox">
                     <span class="slider round"></span>
                 </label>
+        </div>
+    </header>
+    <main>
+        <section class="main_column">
+            <div class="main_header">
+                <h1>Exploring Programming through Codecademy</h1>
+                <!-- <h2>Welcome to my sandbox!</h2> -->
             </div>
-        </header>
-        <main>
+            <div class="main_opener">
+                <p>I have been interested in programming for a number of years, but have never had the opportunity to give time to it...until recently. This interest turned into a pro account on <a href="https://www.codecademy.com" target="_blank">Codecademy.com</a>.
+                    With my love for learning in general and my past enjoyment of learning languages (bachelors degree in Biblical Languages), I quickly found I enjoy learning programming languages. I first tackled the beginner and intermediate Python
+                    courses, along with the courses on Natural Language Processing, Pandas, and Exploratory Data Analysis. Although I really enjoyed these courses, I wanted to continue to expand my basic understanding of different languages. With that
+                    goal in mind, I started the Full-Stack Engineer career path.
+                </p>
+                <p>
+                    This website reflects what I have learned through this curriculum (along with a few google searches). Check out my projects below, my humble <a href="https://github.com/blevings" target="_blank">GitHub account</a>, or connect with
+                    me on <a href="https://www.linkedin.com/in/richard-brian-levings" target="_blank">LinkedIn</a>.
+                </p>
+            </div>
+            <div class="projects_header">
+                <h2>Projects</h2>
+            </div>
+            <div class="projects_container">
+                <div class="project">
+                    <h3>Meat Your Way</h3>
+                    <h4>Business Website</h4>
+                    <p>This project is a rebuild of a website for a family business. This was a project focused on practicing Flexbox. </p>
+                    <a href="./resources/webpages/flexbox-business-site-starting/index.html"><img src="./resources/images/meatyourway.png" alt=""></a>
+                </div>
+                <div class="project">
+                    <h3>AFC Richmond Fan Club</h3>
+                    <h4>Responsive Club Website</h4>
+                    <p>Fake football club. Amazing TV show. Check out Ted Lasso! This project was focused on practicing responsive web design.</p>
+                    <a href="./resources/webpages/starting/index.html"><img src="./resources/images/AFC.png" alt=""></a>
+                </div>
+                <div class="project">
+                    <h3>HTML Cheatsheet</h3>
+                    <h4>First Webpage Project</h4>
+                    <p>This project was an early project in the Codecademy HTML/CSS curriculum. It was focused on practicing building a table. </p>
+                    <a href="./resources/webpages/html-css-cheatsheet/index.html"><img src="./resources/images/HTML Cheatsheet.png" alt=""></a>
+                </div>
+                <div class="project">
+                    <h3>Tea Cozy</h3>
+                    <h4>Codecademy Design Project</h4>
+                    <p>This was the first responsive web design project. A design spec and assets were provided but I was required to build it from scratch.</p>
+                    <a href="./resources/webpages/tea_cozy/index.html"><img src="./resources/images/tea_cozy.png" alt=""></a>
+                </div>
+            </div>
 
-        </main>
-        <footer>
+        </section>
+        <section class="sidebar">
+            <div class="sidebar-container">
+                <div class="img_container">
+                    <img src="./resources/images/Brian Levings_edit.jpg" alt="">
+                </div>
+                <div class="headshot_info">
+                    <h2>Brian Levings</h2>
+                    <h3>Product Manager <br> @ Kimray</h3>
+                    <p>Currently learning web development through Codecademy's Full-Stack Engineer career path</p>
+                    <figure>
+                        <a href="https://www.linkedin.com/in/richard-brian-levings" target="_blank"><img src="./resources/images/LI-Logo.png" alt="LinkedIn Logo"></a>
+                    </figure>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer>
 
-        </footer>
-    </body>
+    </footer>
+
+    <script src="./resources/scripts/scripts.js"></script>
+
+</body>
+
 </html>
