moved about.html to a different folder

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="./about.html">About</a></li>
+                    <li><a href="./resources/pages/about.html">About</a></li>
                     <li><a href="#portfolio">Portfolio</a></li>
                     <li>Resume</li>
                 </ul>
